# unravel-nl

./: .gitignore  Cargo.toml  Makefile  README.ja.md  README.md
.github/workflows/: ci.yml
docs/: benchmarks.md  wasm.md
examples/: bench.rs  entry_bench.rs
src/: adapters.rs  completion.rs  currency.rs  dates.rs  duration.rs  entry.rs  findings.rs  fuzzy.rs  grammar.rs  json_out.rs  lib.rs  normalize.rs  number.rs  parser.rs  quantity.rs  recurrence.rs  scan.rs  schema.rs  suggest.rs  test_util.rs  types.rs  unit_aliases.rs  unit_defs.rs  units.rs  wasm_json.rs
tests/: ai_adapter.rs  ambiguous_quantity_numbers.rs  compound.rs  custom_unit_approximation.rs  date_golden.rs  dimension_editor.rs  expected_dimensions.rs  fuzz_inputs.rs  golden.rs  issue_codes.rs  number_fast.rs  parse_all.rs  parser_instance.rs  parser_invariants.rs  policies_and_views.rs  react_adapter_runtime.mjs  readme_examples.rs  recurrence.rs  registry_alias_collisions.rs  roundtrip.rs  spans.rs  typescript_adapter_smoke.ts  ui_metadata.rs  unicode_locale.rs  unsupported.rs  wasm_browser_e2e.html  wasm_node_smoke.mjs  web_adapters.mjs
tests/corpus/: date_golden.tsv  golden.tsv
tests/support/: mod.rs
web/: package-lock.json  package.json  unravel-adapters.d.ts  unravel-adapters.js
