[package]
name = "unravel-nl"
version = "0.1.0"
edition = "2024"
description = "Deterministic natural-language parsing and humanizing for informal quantities, units, and values."
license = "MIT"
repository = "https://github.com/0xkaz/unravel-nl"
readme = "README.md"
keywords = ["natural-language", "units", "parser", "humanize"]
categories = ["parser-implementations", "value-formatting"]

[dependencies]
jiff = { version = "0.2.33", default-features = false, optional = true }
jiff-tzdb = { version = "0.1.6", default-features = false, optional = true }

[features]
default = []
dates-jiff = ["dep:jiff"]
timezones-jiff = ["dates-jiff", "dep:jiff-tzdb", "jiff/std"]
