[package]
name = "unravel-nl"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Deterministic natural-language parsing and humanizing for informal quantities, units, and values."
license = "MIT OR Apache-2.0"
repository = "https://github.com/0xkaz/unravel-nl"
readme = "README.md"
keywords = ["natural-language", "units", "parser", "humanize"]
categories = ["parser-implementations", "value-formatting"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
jiff = { version = "0.2.33", default-features = false, optional = true }
jiff-tzdb = { version = "0.1.6", default-features = false, optional = true }
wasm-bindgen = { version = "0.2.106", default-features = false, optional = true }

[features]
default = []
dates-jiff = ["dep:jiff"]
timezones-jiff = ["dates-jiff", "dep:jiff-tzdb", "jiff/std"]
wasm = ["dep:wasm-bindgen"]
